<resources>
    <string name="app_name">MyList</string>
    <string name="title_product_list">Liste des produits</string>
    <string name="title_category_list">Liste des catégories</string>
    <string name="title_store_list">Liste des magasins</string>
    <string name="title_shoppinglist_list">Liste des listes de courses</string>
    <string name="title_my_lists">Mes Listes</string>
    <string name="title_my_list">Ma Liste</string>
    <string name="filter_by">Filtrer par </string>s
    <string name="title_product_add">Ajout Produit</string>
    <string name="title_product_modify">Modif. Produit</string>
    <string name="title_product_delete">Suppr. Produit</string>
    <string name="title_category_add">Ajout Catégorie</string>
    <string name="title_category_modify">Modif. Catégorie</string>
    <string name="title_category_delete">Suppr. Catégorie</string>
    <string name="title_store_add">Ajout Magasin</string>
    <string name="title_store_modify">Modif. Magasin</string>
    <string name="title_store_delete">Suppr. Magasin</string>
    <string name="title_shoppinglist_add">Ajout Liste de courses</string>
    <string name="title_shoppinglist_modify">Modif. Liste de courses</string>
    <string name="title_shoppinglist_delete">Suppr. Liste de courses</string>
    <string name="name">Nom</string>
    <string name="brand">Marque</string>
    <string name="price">Prix</string>
    <string name="category">Catégorie</string>
    <string name="store">Magasin</string>
    <string name="shoppinglist">Liste</string>
    <string name="address">Adresse</string>
    <string name="town">Ville</string>
    <string name="btn_locate">Localiser</string>
    <string name="btn_add">Ajouter</string>
    <string name="btn_modify">Modifier</string>
    <string name="btn_delete">Supprimer</string>
</resources>