<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".admin.form.FormShoppinglist">

    <TextView
        android:id="@+id/titleShoppinglistAdd"
        android:text="@string/title_shoppinglist_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInLayoutShoppinglistName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:hint="@string/name"
        app:prefixTextColor="#234459"
        app:boxStrokeColor = "#234459"
        app:counterMaxLength="30"
        app:boxBackgroundMode="outline"
        app:endIconMode="clear_text"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/eShoppinglistName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnShoppinglistAdd"
        android:layout_marginTop="30dp"
        android:text="@string/btn_add"
        android:background="@drawable/btn_round_shape"
        app:backgroundTint="#234459"
        android:onClick="shoppinglistRegistration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtInLayoutShoppinglistName"
        app:layout_constraintEnd_toEndOf="parent"
        style="@style/button" />
</androidx.constraintlayout.widget.ConstraintLayout>